--- a/Readme.in
+++ b/Readme.in
@@ -1,4 +1,4 @@
-# BUILD_FOR_BHARAT
+# BUILD FOR BHARAT
 <h3> Indic Language Support </h3>
 Devexperts is multilingual language supporter which is inside the "indic Language support problem statement " in which we made the solution of that problem statement which helps for E-commerce Website ,or the other organizations .
 Due to this ,There is increase  of people to increase in the E-Commerce Websites or Applications .
